--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.6.0",
     "vue": "^3.2.13",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
