--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "echarts": "^5.6.0",
+    "js-calendar-converter": "^0.0.6",
     "vue": "^3.2.13",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.0.3"
