--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^12.8.2",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "echarts": "^5.6.0",
